# The-network-thread-model

./: README.md
MultiReactor/: CMakeLists.txt  main.cc
MultiReactor/include/mreactor/: conn_task.h  event_handler.h  listen_handler.h  reactor.h  reactor_manager.h  work_reactor.h
MultiReactor/include/unit/: socket_help.h
MultiReactor/src/mreactor/: reactor_manger.cpp  work_reactor.cpp
MultiReactor/src/reactor/: reactor.cpp
MultiReactor/src/reactor/reactor_impl/: reactor_impl.cpp  reactor_impl.h
MultiReactor/src/reactor/reactor_impl/event_demultiplexer/: event_demultiplexer.h
MultiReactor/src/reactor/reactor_impl/event_demultiplexer/impl/: epoll_demultiplexer.cpp  epoll_demultiplexer.h
MultiReactor/tests/: unit_connect_test.cpp  unit_read_write_test.cpp
Proactor/: .gitignore  CMakeLists.txt
Proactor/example/: example_client.cpp  example_server.cpp  listen_server.h
Proactor/include/proactor/: event_handle.h  proactor.h
Proactor/include/unit/: singleton.h
Proactor/include/utils/: singleton.h  socket_help.h  thread_pool.h
Proactor/src/proactor/: proactor.cpp
Proactor/src/proactor/proactor_impl/: proactor_impl.cpp  proactor_impl.h
Proactor/src/proactor/proactor_impl/event_demultiplexer/: event_demultiplexer.h
Proactor/src/proactor/proactor_impl/event_demultiplexer/impl/: epoll_demultiplexer.cpp  epoll_demultiplexer.h
Proactor/tests/: unit_connect_test.cpp  unit_read_write_test.cpp  unit_singleton_test.cpp  unit_thread_pool_test.cpp
Reactor/: .gitignore  CMakeLists.txt  README.md
Reactor/example/: example_client.cpp  example_server.cpp  request_handler.h
Reactor/include/reactor/: event_handler.h  reactor.h
Reactor/include/unit/: global.h  singleton.h  socket_help.h
Reactor/src/reactor/: reactor.cpp
Reactor/src/reactor/event_demultiplexer/: event_demultiplexer.h
Reactor/src/reactor/reactor_impl/: reactor_impl.cpp  reactor_impl.h
Reactor/src/reactor/reactor_impl/event_demultiplexer/: event_demultiplexer.h
Reactor/src/reactor/reactor_impl/event_demultiplexer/impl/: epoll_demultiplexer.cpp  epoll_demultiplexer.h
Reactor/src/util/: global.cpp
Reactor/test/: unit_connect.cpp
ReactorThreadPool/: .gitignore  CMakeLists.txt  README.md
ReactorThreadPool/include/reactor/: reactor.h
ReactorThreadPool/include/unit/: singleton.h
ReactorThreadPool/src/reactor/: reactor.cpp
ReactorThreadPool/src/reactor/reactor_impl/: reactor_impl.cpp  reactor_impl.h
ReactorThreadPool/src/reactor/reactor_impl/event_demultiplexer/: event_demultiplexer.h
ReactorThreadPool/src/reactor/reactor_impl/event_demultiplexer/impl/: epoll_demultiplexer.cpp  epoll_demultiplexer.h
ReactorThreadPool/test/: CMakeLists.txt  unit_singleton.cpp
ReactorThreadPool/tools/: build_without_lib_update.sh  lib_update_posix.sh
