cmake_minimum_required(VERSION 3.2)
project(tests)
find_package(GTest REQUIRED)
file(GLOB ALL_TEST_SOURCES "*.cpp")
foreach(TEST_SOURCE ${ALL_TEST_SOURCES})
    get_filename_component(FIL_WE ${TEST_SOURCE} NAME_WE)
    list(APPEND tests ${FIL_WE})
endforeach()
include_directories(${GTEST_INCLUDE_DIRS})
link_libraries(${GTEST_BOTH_LIBRARIES} gmock pthread)
# we can just link gmock when we impl main function
#link_libraries( gmock pthread)
foreach(test ${tests})
    add_executable(${test} ${test}.cpp)
    add_test(NAME ${test} COMMAND ${test})
endforeach()